fix: alignment with participant and champion icon

--- a/frontend/src/Match/MatchSummary/ParticipantChampion.css
+++ b/frontend/src/Match/MatchSummary/ParticipantChampion.css
@@ -1,4 +1,8 @@
-
+.participant-champion {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3px;
+}
 
 .participant-champion img {
     width: 24px;
